fix: 찜 목록 오류 수정 및 사진 수정